--- a/src/app/pages/dte/template/create/personalize/template-create-personalize.component.html
+++ b/src/app/pages/dte/template/create/personalize/template-create-personalize.component.html
@@ -679,7 +679,12 @@
                             <div fxFlex="30">Maksimal UPC Code yang diinput:</div>
                             <div fxLayout="row" fxFlex="20">
                               <mat-form-field fxFlex="100" class="question is-light">
-                                <input class="inputUPC" matInput type="number" value="" min="1">
+                                <input class="inputUPC" matInput 
+                                formControlName="upcCodeMax"
+                                type="number" min="1">
+                                <mat-error>
+                                  Maksimal UPC Code harus diisi
+                                </mat-error>
                               </mat-form-field>
                             </div>
                           </div>
@@ -687,15 +692,20 @@
                             <div fxFlex="30">Konversi coin per 1 kode UPC:</div>
                             <div fxLayout="row" fxFlex="20">
                               <mat-form-field fxFlex="100" class="question is-light">
-                                <input class="inputUPC" (keypress)="handleUPC($event)"  matInput type="text" >
+                                <input class="inputUPC" 
+                                formControlName="upcCoin" 
+                                matInput type="number" >
+                                <mat-error>
+                                  Konversi coin harus diisi
+                                </mat-error>
                               </mat-form-field>
                             </div>
                           </div>
                           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
                             <div fxFlex="30">Brand Family:</div>
                             <div fxLayout="row" fxFlex="20">
-                              <search-product-barcode>
-                                <mat-error *ngIf="templateTaskForm.controls['upcConversionCoin'].hasError('required') && templateTaskForm.controls['upcConversionCoin'].touched">
+                              <search-product-barcode formControlName="upcBrandFamily">
+                                <mat-error>
                                   Brand Family Harus diisi
                                 </mat-error>
                               </search-product-barcode>
