--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -603,7 +603,10 @@
                         <div fxFlex="30">Maksimal UPC Code yang diinput:</div>
                         <div fxLayout="row" fxFlex="20">
                           <mat-form-field fxFlex="100" class="question is-light">
-                            <input class="inputUPC" matInput type="number" value="" min="1">
+                            <input class="inputUPC" formControlName="upcCodeMax" matInput type="number" min="1">
+                            <mat-error>
+                              Maksimal UPC Code harus diisi
+                            </mat-error>
                           </mat-form-field>
                         </div>
                       </div>
@@ -611,7 +614,10 @@
                         <div fxFlex="30">Konversi coin per 1 kode UPC:</div>
                         <div fxLayout="row" fxFlex="20">
                           <mat-form-field fxFlex="100" class="question is-light">
-                            <input class="inputUPC"  matInput type="text" >
+                            <input class="inputUPC" formControlName="upcCoin"  matInput type="text" >
+                            <mat-error>
+                              Konversi coin harus diisi
+                            </mat-error>
                           </mat-form-field>
                         </div>
                       </div>
