--- a/src/app/pages/dte/template/edit/template-edit.component.html
+++ b/src/app/pages/dte/template/edit/template-edit.component.html
@@ -565,7 +565,10 @@
                         <div fxFlex="30">Maksimal UPC Code yang diinput:</div>
                         <div fxLayout="row" fxFlex="20">
                           <mat-form-field fxFlex="100" class="question is-light">
-                            <input class="inputUPC" matInput type="number" value="" min="1">
+                            <input class="inputUPC" matInput type="number" min="1">
+                            <mat-error>
+                              Maksimal UPC Code harus diisi
+                            </mat-error>
                           </mat-form-field>
                         </div>
                       </div>
@@ -573,7 +576,10 @@
                         <div fxFlex="30">Konversi coin per 1 kode UPC:</div>
                         <div fxLayout="row" fxFlex="20">
                           <mat-form-field fxFlex="100" class="question is-light">
-                            <input class="inputUPC" (keypress)="handleUPC($event)"  matInput type="text" >
+                            <input class="inputUPC"  matInput type="text" >
+                            <mat-error>
+                              Konversi coin harus diisi
+                            </mat-error>
                           </mat-form-field>
                         </div>
                       </div>
