--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -97,7 +97,7 @@
 
           <!-- spesifik produk b2b -->
           <div fxLayout="row" *ngIf=" formNotification.controls['user_group'].value === 'retailer' && formNotification.get('content_type').value === 'spesific_product_b2b'">
-              <search-product-barcode fxFlex="45" [value]="formNotification.controls['barcode'].value" (onChange)="handleSearchProduct($event)" [disabled]="this.actionType === 'detail'">
+              <search-product-barcode [inputPlaceHolder]="'Search Barcode'" fxFlex="45" [value]="formNotification.controls['barcode'].value" (onChange)="handleSearchProduct($event)" [disabled]="this.actionType === 'detail'">
                 <mat-error
                 *ngIf="formNotification.controls['barcode'].hasError('required') && formNotification.controls['barcode'].touched">
                 <!-- {{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}} {{'global.messages.mandatory_text' |
