--- a/src/app/shared/search-product-barcode/search-product-barcode.component.html
+++ b/src/app/shared/search-product-barcode/search-product-barcode.component.html
@@ -1,7 +1,7 @@
 <mat-form-field fxLayout="row wrap" class="is-light form-primary search-product-barcode">
   <input
     matInput
-    placeholder="Barcode Produk"
+    [placeholder]="inputPlaceHolder"
     [formControl]="search"
     [matAutocomplete]="auto"
     #searchInput
@@ -15,7 +15,7 @@
       {{ item.name }} - {{item.id}}
     </mat-option>
     <mat-option *ngIf="!isLoading() && !filteredOptions.length" disabled>
-      Tidak ada produk yang ditemukan
+      {{errorMessage}}
     </mat-option>
     <mat-option *ngIf="isLoading()" disabled>
       <div class="spinner">
