--- a/src/app/shared/search-product-barcode/search-product-barcode.component.html
+++ b/src/app/shared/search-product-barcode/search-product-barcode.component.html
@@ -1,7 +1,7 @@
 <mat-form-field fxLayout="row wrap" class="is-light form-primary search-product-barcode">
   <input
     matInput
-    placeholder="Barcode Produk"
+    [placeholder]="inputPlaceHolder"
     [formControl]="search"
     [matAutocomplete]="auto"
     #searchInput
@@ -15,13 +15,16 @@
       {{ item.name }} - {{item.id}}
     </mat-option>
     <mat-option *ngIf="!isLoading() && !filteredOptions.length" disabled>
-      Ga ada data
+      {{errorMessage}}
     </mat-option>
     <mat-option *ngIf="isLoading()" disabled>
       <div class="spinner">
         <mat-spinner diameter="18" color="primary"></mat-spinner>
       </div>
     </mat-option>
+    <!-- <mat-error>
+      Brand Family Harus diisi
+    </mat-error> -->
   </mat-autocomplete>
   <button
     *ngIf="search.value && !this.disabled"
