--- a/src/app/pages/dte/coin-disburstment/index/coin-disburstment.component.html
+++ b/src/app/pages/dte/coin-disburstment/index/coin-disburstment.component.html
@@ -105,6 +105,9 @@
             </ngx-datatable-column>
           </ngx-datatable>
         </mat-tab>
+        <mat-tab label="Data Log">
+          <app-data-log></app-data-log>
+        </mat-tab>
       </mat-tab-group>
     </div>
   </div>
