--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -603,7 +603,9 @@
                         <div fxFlex="30">Maksimal UPC Code yang diinput:</div>
                         <div fxLayout="row" fxFlex="20">
                           <mat-form-field fxFlex="100" class="question is-light">
-                            <input class="inputUPC" formControlName="upcCodeMax" matInput type="number" min="1">
+                            <input class="inputUPC" matInput 
+                            formControlName="upcCodeMax"
+                            type="number" min="1">
                             <mat-error>
                               Maksimal UPC Code harus diisi
                             </mat-error>
@@ -614,7 +616,9 @@
                         <div fxFlex="30">Konversi coin per 1 kode UPC:</div>
                         <div fxLayout="row" fxFlex="20">
                           <mat-form-field fxFlex="100" class="question is-light">
-                            <input class="inputUPC" formControlName="upcCoin"  matInput type="text" >
+                            <input class="inputUPC" 
+                            formControlName="upcCoin" 
+                            matInput type="number" >
                             <mat-error>
                               Konversi coin harus diisi
                             </mat-error>
@@ -622,10 +626,9 @@
                         </div>
                       </div>
                       <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-                        <div fxFlex="30">Brand Family:</div>
-                        <div fxLayout="row" fxFlex="20">
-                          <search-product-barcode>
-                            <mat-error *ngIf="templateTaskForm.controls['upcConversionCoin'].hasError('required') && templateTaskForm.controls['upcConversionCoin'].touched">
+                        <div fxLayout="row" fxFlex="50">
+                          <search-product-barcode style="width: 100%;" [errorMessage]="'Tidak Ditemukan Brand'" [inputPlaceHolder]="'Search Brand Family'" [isBrandFamily]="true" formControlName="upcBrandFamily">
+                            <mat-error *ngIf="templateTaskForm.get('questions').at(i).get('upcBrandFamily').hasError('required') && templateTaskForm.get('questions').at(i).get('upcBrandFamily').touched && templateTaskForm.touched">
                               Brand Family Harus diisi
                             </mat-error>
                           </search-product-barcode>
@@ -633,6 +636,7 @@
                       </div>
                     </div>
                   </ng-container>
+                  <!-- <p>{{templateTaskForm.get('questions').at(i).get('upcBrandFamily').hasError('required')}} - {{templateTaskForm.get('questions').at(i).get('upcBrandFamily').touched}} - {{templateTaskForm.touched}}</p> -->
                   <ng-container
                     *ngIf="item.get('typeSelection').value['value'] && item.get('typeSelection').value['value'] !== 'text' && item.get('typeSelection').value['value'] !== 'textarea' && item.get('typeSelection').value['value'] !== 'image' && item.get('typeSelection').value['value'] !== 'numeric' && item.get('typeSelection').value['value'] !== 'date' && item.get('typeSelection').value['value'] !== 'upc'">
                     <div fxFlex="100" fxLayout="column">
