--- a/src/app/pages/dte/template/edit/personalize/template-edit-personalize.component.html
+++ b/src/app/pages/dte/template/edit/personalize/template-edit-personalize.component.html
@@ -677,7 +677,9 @@
                             <div fxFlex="30">Maksimal UPC Code yang diinput:</div>
                             <div fxLayout="row" fxFlex="20">
                               <mat-form-field fxFlex="100" class="question is-light">
-                                <input class="inputUPC" matInput type="number" min="1">
+                                <input class="inputUPC" matInput 
+                                formControlName="upcCodeMax"
+                                type="number" min="1">
                                 <mat-error>
                                   Maksimal UPC Code harus diisi
                                 </mat-error>
@@ -688,7 +690,9 @@
                             <div fxFlex="30">Konversi coin per 1 kode UPC:</div>
                             <div fxLayout="row" fxFlex="20">
                               <mat-form-field fxFlex="100" class="question is-light">
-                                <input class="inputUPC" (keypress)="handleUPC($event)"  matInput type="text" >
+                                <input class="inputUPC" 
+                                formControlName="upcCoin" 
+                                matInput type="number" >
                                 <mat-error>
                                   Konversi coin harus diisi
                                 </mat-error>
@@ -696,10 +700,9 @@
                             </div>
                           </div>
                           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-                            <div fxFlex="30">Brand Family:</div>
-                            <div fxLayout="row" fxFlex="20">
-                              <search-product-barcode>
-                                <mat-error *ngIf="templateTaskForm.controls['upcConversionCoin'].hasError('required') && templateTaskForm.controls['upcConversionCoin'].touched">
+                            <div fxLayout="row" fxFlex="50">
+                              <search-product-barcode style="width: 100%;" [errorMessage]="'Tidak Ditemukan Brand'" [inputPlaceHolder]="'Search Brand Family'" [disabled]="isDetail" [isBrandFamily]="true" formControlName="upcBrandFamily">
+                                <mat-error *ngIf="templateTaskForm.get('questions').at(i).get('upcBrandFamily').hasError('required') && templateTaskForm.touched">
                                   Brand Family Harus diisi
                                 </mat-error>
                               </search-product-barcode>
