--- a/src/app/shared/search-product-barcode/search-product-barcode.component.html
+++ b/src/app/shared/search-product-barcode/search-product-barcode.component.html
@@ -1,9 +1,10 @@
-<mat-form-field fxLayout="row wrap" class="is-light form-primary search-product-barcode">
+<mat-form-field fxLayout="row wrap" [hideRequiredMarker]="true" class="is-light form-primary search-product-barcode">
   <input
     matInput
     [placeholder]="inputPlaceHolder"
     [formControl]="search"
     [matAutocomplete]="auto"
+    required
     #searchInput
   />
   <mat-autocomplete
@@ -22,9 +23,6 @@
         <mat-spinner diameter="18" color="primary"></mat-spinner>
       </div>
     </mat-option>
-    <!-- <mat-error>
-      Brand Family Harus diisi
-    </mat-error> -->
   </mat-autocomplete>
   <button
     *ngIf="search.value && !this.disabled"
