--- a/src/app/pages/user-management/field-force/index/field-force-index.component.html
+++ b/src/app/pages/user-management/field-force/index/field-force-index.component.html
@@ -2,10 +2,10 @@
   <!-- HEADER -->
   <page-content-header [contentTitle]="ls.locale.field_force.page_title">
     <div class="button-row" fxLayout="row">
-      <!-- <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/user-management','field-force','create']">
+      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/user-management','field-force','create']">
         <mat-icon>add</mat-icon>TAMBAH
       </button>
-      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" class="is-danger">HAPUS</button> -->
+      <!--- <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" class="is-danger">HAPUS</button> -->
     </div>
   </page-content-header>
   <!-- / HEADER -->
