fix return init list on search input value empty

--- a/src/app/shared/search-product-barcode/search-product-barcode.component.html
+++ b/src/app/shared/search-product-barcode/search-product-barcode.component.html
@@ -15,7 +15,7 @@
     <mat-option *ngFor="let item of filteredOptions" [value]="item.id">
       {{ item.name }} - {{item.id}}
     </mat-option>
-    <mat-option *ngIf="!isLoading() && !filteredOptions.length" disabled>
+    <mat-option *ngIf="search.value && !isLoading() && !filteredOptions.length" disabled>
       {{errorMessage}}
     </mat-option>
     <mat-option *ngIf="isLoading()" disabled>
