--- a/src/app/pages/dte/template/create/personalize/template-create-personalize.component.html
+++ b/src/app/pages/dte/template/create/personalize/template-create-personalize.component.html
@@ -682,7 +682,7 @@
                                 <input class="inputUPC" matInput 
                                 formControlName="upcCodeMax"
                                 type="number" min="1" 
-                                onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
+                                onkeypress='return event.charCode >= 48 && event.charCode <= 57 && (event.target.value.length === 0 && event.which ===48) ? false : true'>
                                 <mat-error>
                                   Maksimal UPC Code harus diisi
                                 </mat-error>
@@ -695,8 +695,10 @@
                               <mat-form-field fxFlex="100" class="question is-light">
                                 <input class="inputUPC" 
                                 formControlName="upcCoin" 
-                                matInput type="number" 
-                                onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
+                                matInput type="number"
+                                min="1"  
+                                onkeypress='return event.charCode >= 48 && event.charCode <= 57 && (event.target.value.length === 0 && event.which ===48) ? false : true'>
+                                <!-- onkeypress='console.log(event)'>  -->
                                 <mat-error>
                                   Konversi coin harus diisi
                                 </mat-error>
