--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -606,7 +606,7 @@
                             <input class="inputUPC" matInput 
                             formControlName="upcCodeMax"
                             type="number" min="1" 
-                            onkeypress='return event.charCode >= 48 && event.charCode <= 57 && (event.target.value.length === 0 && event.which ===48) ? false : true'>
+                            onkeypress='return event.charCode >= 48 && event.charCode <= 57 ? (event.target.value.length === 0 && event.which ===48) ? false : true: false'>
                             <mat-error>
                               Maksimal UPC Code harus diisi
                             </mat-error>
@@ -620,7 +620,7 @@
                             <input class="inputUPC" 
                             formControlName="upcCoin" 
                             matInput type="number" min="1" 
-                            onkeypress='return event.charCode >= 48 && event.charCode <= 57 && (event.target.value.length === 0 && event.which ===48) ? false : true'>
+                            onkeypress='return event.charCode >= 48 && event.charCode <= 57 ? (event.target.value.length === 0 && event.which ===48) ? false : true: false'>
                             <mat-error>
                               Konversi coin harus diisi
                             </mat-error>
