--- a/src/app/shared/import-audience/import-audience.component.html
+++ b/src/app/shared/import-audience/import-audience.component.html
@@ -20,7 +20,7 @@
 
   <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar>
     <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
-      [accept]="fileType || ''" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
+       [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
       (fileChange)="preview($event)">
       <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
         <mat-icon class="secondary-text s-48">attach_file</mat-icon>
