--- a/src/app/pages/dte/trade/create/trade-create.component.html
+++ b/src/app/pages/dte/trade/create/trade-create.component.html
@@ -47,7 +47,7 @@
               </mat-select> -->
               <mat-select formControlName="group_trade_program" placeholder="{{'dte.group_trade_program.text1' | translate}}" #singleSelect>
                 <ngx-mat-select-search [formControl]="filterGTP" placeholderLabel="{{'global.label.search' | translate}} {{'dte.group_trade_program.text1' | translate}}..."
-                  noEntriesFoundLabel="{{'dte.trade_program.group_trade_program_not_found' | translate}}"></ngx-mat-select-search>
+                  noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTP | async" [value]="item.id">
                   {{item.name}}
                 </mat-option>
@@ -55,8 +55,8 @@
             </mat-form-field>
             <mat-form-field fxFlex="50" class="is-light form-primary">
               <mat-select formControlName="sub_group_trade_program" placeholder="Sub Group Trade Program" #singleSelect>
-                <ngx-mat-select-search [formControl]="filterSGTP" placeholderLabel="{{'global.label.search' | translate}} {{'dte.group_trade_program.text1' | translate}}..."
-                  noEntriesFoundLabel="{{'dte.trade_program.group_trade_program_not_found' | translate}}"></ngx-mat-select-search>
+                <ngx-mat-select-search [formControl]="filterSGTP" placeholderLabel="{{'global.label.search' | translate}} Sub {{'dte.group_trade_program.text1' | translate}}..."
+                  noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredSGTP | async" [value]="item.id">
                   {{item.name}}
                 </mat-option>
